load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//project/package1:typescript/package_json.bzl", "bin")

npm_link_all_packages(
    name = "node_modules",
)

bin.tsc_test(
    name = "typecheck",
    args = [
        "--noEmit",
    ],
    chdir = package_name(),
    data = [
        "src/ComponentUsingHelmet.tsx",
        ":node_modules/@types/react",
        ":node_modules/react",
        ":node_modules/react-dom",
        ":node_modules/react-helmet-async",
        ":tsconfig.json",
    ],
)
